--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: todo
-        image: abhishekf5/todo-app:v1
+        image: vikramvimal/cicd-e2e:1
         ports:
         - containerPort: 8000
